tests/method_type_param_variance_error/method_type_param_variance_error.exp
Error ----------------------------------------------------------------------------------------------------- test.js:9:11

Variance modifiers cannot appear on a type parameter of a function type. [unsupported-variance-annotation]

   9| type F = <out T>(x: T) => void; // ERROR
                ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:10:11

Variance modifiers cannot appear on a type parameter of a function type. [unsupported-variance-annotation]

   10| type G = <in T>() => T; // ERROR
                 ^^


Error ----------------------------------------------------------------------------------------------------- test.js:14:7

Variance modifiers cannot appear on a type parameter of a function. [unsupported-variance-annotation]

   14|   foo<out T>(x: T): void {} // ERROR
             ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:14:17

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test.js:14:17
   14|   foo<out T>(x: T): void {} // ERROR
                       ^

References:
   test.js:14:11
   14|   foo<out T>(x: T): void {} // ERROR
                 ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:15:7

Variance modifiers cannot appear on a type parameter of a function. [unsupported-variance-annotation]

   15|   bar<in T>(): T {
             ^^


Error ---------------------------------------------------------------------------------------------------- test.js:15:16

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:15:16
   15|   bar<in T>(): T {
                      ^

References:
   test.js:15:10
   15|   bar<in T>(): T {
                ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:22:7

Variance modifiers cannot appear on a type parameter of a method. [unsupported-variance-annotation]

   22|   foo<out T>(x: T): void; // ERROR
             ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:22:17

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test.js:22:17
   22|   foo<out T>(x: T): void; // ERROR
                       ^

References:
   test.js:22:11
   22|   foo<out T>(x: T): void; // ERROR
                 ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:23:7

Variance modifiers cannot appear on a type parameter of a method. [unsupported-variance-annotation]

   23|   bar<in T>(): T; // ERROR
             ^^


Error ---------------------------------------------------------------------------------------------------- test.js:23:16

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:23:16
   23|   bar<in T>(): T; // ERROR
                      ^

References:
   test.js:23:10
   23|   bar<in T>(): T; // ERROR
                ^ [1]



Found 10 errors
